--- a/project3.html
+++ b/project3.html
@@ -23,6 +23,7 @@
     <div class="logins">
     <button class="log">Login</button>
     <button>Signup</button>
+    <!-- added new things -->
     <select>
         <option>EN</option>
         <option>SP</option>
